syntax = "proto3";
package satawatnack.goldchain.goldchain;

option go_package = "github.com/satawatnack/goldchain/x/goldchain/types";

import "gogoproto/gogo.proto";
import "google/api/annotations.proto";

// Query defines the gRPC querier service.
service Query {
    rpc balances(QueryBalancesRequest) returns (QueryBalancesResponse);

    rpc Result(QueryResultRequest) returns (QueryResultResponse) {
        option (google.api.http).get = "/consuming/v1/result/{request_id}";
    }
}

message QueryBalancesRequest {
    string sender = 1;
}

message QueryBalancesResponse {
    string balance = 1;
}

message QueryResultRequest { int64 request_id = 1; }

message QueryResultResponse {
  bytes result = 1;
}
